--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <img src="img/img (2).png"class="hero-block_img">
 
         <div class="hero-block_content">
-            <h2 class="hero-block_title">Я Алексей Бобров</h2>
-            <p class="hero-block_text">я занимаюсь html програмированием и совсем чуть чуть 🤏 дизайном.  если вы хотите что то связонное с этим или вам просто скучно то напишите мне</p>
+            <h2 class="hero-block_title">АЛЕКСАНДРА ЕБАРЬ</h2>
+            <p class="hero-block_text">сырные шарики сырные шарики сырные шарики сырные шарики сырные шарики сырные шарики сырные шарики сырные шарики сырные шарики сырные шарики сырные шарики сырные шарики сырные шарики сырные шарики сырные шарики </p>
             <a href="#" class="hero-block_link">написать мне</a>
         </div>
     </div>
